--- a/src/main/webapp/styleMain.css
+++ b/src/main/webapp/styleMain.css
@@ -132,6 +132,36 @@
     text-align: center;
 }
 
+.ear{
+    font-family: Verdana, sans-serif;
+    font-size: 16px;
+    padding: 20px;
+    width: 80%;
+    max-width: 600px;
+    max-height: 70%;
+    transition: 0.5s;
+    border: 6px solid #BFE2FF;
+    border-radius: 12px;
+    background: #FFF;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2), 0 16px 20px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+#qwerty{
+    font-family: Verdana, sans-serif;
+    font-size: 16px;
+    padding: 20px;
+    width: 80%;
+    max-width: 600px;
+    max-height: 70%;
+    transition: 0.5s;
+    border: 6px solid #BFE2FF;
+    border-radius: 12px;
+    background: #FFF;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2), 0 16px 20px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
 body{
     margin: 0px;
 }
