добавлена функция редактирования новостных постов а также исправлена функция удаления постов

--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -10,8 +10,10 @@
 
 .news{
     text-align: center;
-    align-content: center;
+    display: flow;
+    width: 50%;
     border: solid black;
+
 }
 
 #sub{
@@ -38,4 +40,10 @@
 }
 .textcols .textcols-item:first-child {
     margin-right: 4%;
+}
+.post{
+    width: revert-layer;
+    text-align: center;
+    display: block;
+    border: 2px solid #23a6d5;
 }
